# Proyecto_BI_3

./: CODE_REVIEW.md  DOCUMENTACION_COMPLETA.md  GUIA_EJECUCION_Y_TESTS.md  Informe_Sprint1_Crypto_ETL_EDA.docx  README.md  SPRINT2_ANALYSIS.md  SPRINT3_API_REPORT.md  clustering_interpretation.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
analysis/: clustering.py
api/: main.py  middleware.py
api/routes/: health.py  history.py  predict.py  recommend.py
api/schemas/: models.py
api/services/: history.py  prediction.py  recommendation.py
api/utils/: loader.py
dashboard/: app.py
data/: DOGE.csv  crypto_clean_BTC_ETH_BNB.csv  raw_crypto.csv  recommend_history.json
docs/: Sprint1_EDA_Report.md
reports/eda/: EDA_summary.csv
scripts/: analysis_pipeline.ipynb  clean_data.py  eda_report.py  extract_data.py  models_arima.py  models_rnn.py
tests/: test_api.py
timeseries/: models_arima.py
