
[tool.poetry]
name = "crypto-bi3"
version = "0.2.0"
description = "Crypto ETL + EDA + Clustering + Time Series (ARIMA, LSTM/GRU)"
authors = ["Juan David Reyes Cure", "Julio David Suarez Olaya", "Adriana Michelle Diaz Suarez"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.0"
requests = "^2.31.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-learn = "^1.4.0"
statsmodels = "^0.14.0"
tensorflow = "^2.16.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
jupyter = "^1.0.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
